--- a/manuscript_00.Rmd
+++ b/manuscript_00.Rmd
@@ -144,7 +144,7 @@ We define batch as being each biological sample and assume each study is at leas
 
 ## scPOP wraps several different methods at measuring integration performance. 
 
-scPOP is a lightweight, low dependency R package which brings together the Local Simpson Index (LISI) and Average Silhouette Width (ASW) metrics from Harmony and kBET, respectively, and re-implements the Adjusted Rand Index (ARI) and Normalized Mutual Information (NMI) algorithms. The LISI and ASW were used to measure batch mixing (where lower is better), cell type mixing (higher is better), and cluster mixing (higher is better). NMI and ARI were used to assess the consistency of cell type to cluster assignment (where 1 is perfect correspondence between cluster and cell type).
+scPOP is a lightweight, low dependency R package which brings together the Local Simpson Index (LISI) and Average Silhouette Width (ASW) metrics from Harmony and kBET, respectively, and brings in the Adjusted Rand Index (ARI) and Normalized Mutual Information (NMI) algorithms from aricode. The LISI and ASW were used to measure batch mixing (where lower is better), cell type mixing (higher is better), and cluster mixing (higher is better). NMI and ARI were used to assess the consistency of cell type to cluster assignment (where 1 is perfect correspondence between cluster and cell type).
 
 To visualize the interplay between batch mixing and cell type distinction we plot the batch mixing LISI score (which has been multiplied by -1) on plotted on the y-axis (higher is better) against the cluster LISI on the x-axis (higher is better). The best performer on both metrics will be in the top right corner  (`r supFig_cap(name = 'supFig_benchmark', display = 'cite')`a). In the same manner we plot the silhouette metric (`r supFig_cap(name = 'supFig_benchmark', display = 'cite')` b). 
 
@@ -157,7 +157,7 @@ On one extreme we have combat, which merges together different batches very well
 <!-- https://www.frontiersin.org/articles/10.3389/fgene.2020.00041/full -->
 There are several normalization approaches that have been used or published. The "standard" approach that the popular analysis packages Seurat and anndata use by default is to, per cell, divide the counts by the sum counts for the cell, multiply by a scaling factor, then log transform. This helps make the count distribution more normal, which is an assumption that many algorithms require. In contrast, the scran normalization method groups cells into pools and normalizes across the pool summed counts instead of the individual cell counts. We also use the square root (sqrt) normalization which replaces the log transformation with a square root. Library size (libSize) normalization omits the sqrt or log transformation. Finally some methods like scVI directly use the raw counts data for modeling the data. 
 
-We see in the across the sumZScale metric, which we define as sumZScale = zscale(LISI batch) + zscale(LISI cluster) + zscale(LISI cell type) + zscale(silhouette batch) + zscale(silhouette cluster) + zscale(silhouette cell type) + zscale(NMI) + zscale(ARI) that scVI overall performs best. As expected the libSize normalization which omits the log or square root scaling generally performs the worst (`r fig_cap(name = 'figBenchmark', display = 'cite')`c). We see that the remaining normalization approaches alters the batch correction performance, though the exact outcome differs across the different methods. We also see that changing the number of latent dimensions (8 or 30) can occasionally dramatically change performance. These results demonstrate the importance of assessing performance in a rigorous manner aceoss many parameters. 
+To merge the different scores we define $sumZScale = \sum scale(m)$ where m is a metric (LISI by batch, LISI by cluster, LISI by cell type, silhouette by batch, silhouette by cluster, silhouette by celltype, NMI, and ARI). In this scaled metric that weights the different benchmarking algorithms evently, scVI performs best. As expected the libSize normalization which omits the log or square root scaling generally performs the worst (`r fig_cap(name = 'figBenchmark', display = 'cite')`c). We see that the remaining normalization approaches alters the batch correction performance, though the exact outcome differs across the different methods. We also see that changing the number of latent dimensions (8 or 30) can occasionally dramatically change performance. These results demonstrate the importance of assessing performance in a rigorous manner aceoss many parameters. 
 
 <!-- For users who have custom needs, the weights of each metrics can be customized in scPOP to prioritize batch mixing or cluster/cell type separation. -->
 
@@ -306,13 +306,13 @@ The photoreceptors (cones and rods) of the retina which are responsible for colo
 
 <!-- Differential gene expression testing between clusters or cell types in the single cell field usually involve using running the statistical test of choice with all individual cells across the group. In bulk RNA-seq the tests are done in relation to replicates, which are generally required. As we have a large number of replicates, we can sum our gene expression counts by group (e.g. celltype or cluster, split by organism and study). After this summing, we now have created a "pseudo-bulk" matrix. The statistical properties (CITE SOMETHING) are now similar to the traditional bulk RNA-seq experiment, allowing us to leverage the robust tooling. We use the edgeR test to run our differential expression tests.  -->
 
-## Projection of new data onto scEiaD 
+## Projection of new data onto scEiaD shows that outside datasets for both tissue and iPSC-based samples overlap the scEiaD/scVI model
 
 The hard work of creating this resource can be leveraged and extended by the wider community with relatively few simple steps and modest compute requirements. Very briefly, if outside groups quantify their mouse or human scRNA with kallisto and the same references (see methods), they can overlay their data on top of scEiaD by 1. installing scVI >=0.8.0, 2. downloading our ~13 megabyte scVI model, and 3. following the Jupyter notebook on Google colab that we provide as supplemental file BLOOP and at http://colab.goo. We demonstrate by adding self-generated iPSC-based RPE along with previously published retina organoid and cell line data to scEiaD. 
 
-Projection of new data onto scEiaD potentially allows for semi-direct comparison of other species, *in vitro* systems, and pharamacologic / mutational perturbation of mammalian retina cells. 
+Projection of new data onto scEiaD allows for semi-direct comparison of other species, *in vitro* systems, and pharamacologic / mutational perturbation of mammalian retina cells. In the previous example we demonstrated how a outside mouse pan-retina dataset maps onto 
 
-We demonstrate with a provided iPSC-based RPE cell line that we sequenced that non-tissue can be projected onto the scEiaD
+We demonstrate with a iPSC-based RPE cell line that we ran with the 10x v2 system that non-primary cells can be projected onto the scEiaD. The differentiated iPSC-based RPE from this highly optimized differentiation protocol (CITE BHARTI) overlap post-mortem adult human RPE cells from the Cowan et al. work. (MAKE FIGURE)
 
 <!-- ## Pan mouse as non-ocular reference to improve retina-specific gene search -->
 
